# le_poulet

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-mobile.yml  deploy-web.yml  release.yml
apps/api/: .env.example  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
apps/api/app/: config.py  database.py  main.py  redis.py
apps/api/app/models/: __init__.py  challenge.py  chicken.py  game.py  location.py  player.py  team.py  user.py  weapon.py
apps/api/app/routers/: auth.py  bars.py  challenges.py  chickens.py  costumes.py  games.py  locations.py  players.py  suggestions.py  teams.py  weapons.py
apps/api/app/schemas/: challenge.py  game.py  player.py
apps/api/app/services/: bar_service.py  challenge_engine.py  chicken_picker.py  circle_engine.py  game_service.py  geocode_service.py  notification_service.py  power_up_engine.py  scheduler.py  team_builder.py
apps/api/app/utils/: codes.py  geo.py  i18n.py
apps/api/app/websockets/: events.py  handler.py  manager.py
apps/api/data/: challenges_en.json  challenges_fr.json  cities.json  montreal_bars.json
apps/api/migrations/: env.py
apps/api/scripts/: seed.py  seed_test_game.py  simulate_game.py
apps/api/tests/: conftest.py  test_bar_service.py  test_challenges.py  test_games.py  test_teams.py  test_websockets.py
docs/: ADDING_A_CITY.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  IOS_SETUP.md  IOS_TESTING.md
(+73 files in other folders)
